# nng_competition_2016

./: .gitignore  CMakeLists.txt  README.md  Tuprules.tup  compile.tup  link.tup
Schrodinger/: CMakeLists.txt  Tupfile  checker.cpp  main.cpp  solution.cpp  solution.hpp  task.README  test.cpp  worst_case.cpp
creep/: .gitignore  AIGameManager.cpp  AIGameManager.hpp  CircleCache.cpp  CircleCache.hpp  Command.hpp  CommonParameters.cpp  CommonParameters.hpp  Constants.hpp  Creep.hpp  Game.cpp  Game.hpp  GameInfo.cpp  GameInfo.hpp  GeneticPopulation.cpp  GeneticPopulation.hpp  Genome.hpp  LearningController.cpp  LearningController.hpp  LearningParameters.hpp  Log.hpp  ManualSolver.cpp  ManualSolver.hpp  NeuralNetwork.cpp  NeuralNetwork.hpp  NeuronWeights.hpp  Node.hpp  Options.cpp  Options.hpp  PopulationRunner.cpp  PopulationRunner.hpp  Random.hpp  Solver.cpp  Solver.hpp  Spread.hpp  Status.cpp  Status.hpp  Table.hpp  Tupfile  creep.cc  (+3 more)
lakotelep/: CMakeLists.txt  Tupfile  all.cpp  all.hpp  auto_predicates.hpp  generator.cpp  generator.hpp  interactive.cpp  main.cpp  semi_interactive.cpp  solution.hpp  task.README  test.cpp
padlolap/: Tupfile  fifth.cpp  first.cpp  fourth.cpp  run.sh  second.cpp  third.cpp
test/: Tupfile  matrix_io.cpp
util/: Direction.cpp  Direction.hpp  DumperFunctions.hpp  Matrix.hpp  MatrixIO.hpp  Neighbors.hpp  Point.cpp  Point.hpp  PointRange.hpp
worddomino/: Tupfile  check.cpp  find_longest_overlaps_once.cpp  main.cpp  randomize_longest_overlaps.cpp  randomize_overlaps.cpp  second.cpp
